refactor: modernize Cip68DatumParser — switch expressions, early returns
- Replace if-else instanceof chains with early-return guard clauses
  (no else after return)
- Replace getStringProperty/getNumericProperty if-else with switch
  expressions using pattern matching (case BytesPlutusData bytes ->)
- Use isBlank() instead of trim().isEmpty()
- Remove unnecessary nesting — flat structure with early exits

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>